HTML nuevo, login, olvidarcontra

--- a/veterinaria/menu/templates/menu/HTML/Plantilla.html
+++ b/veterinaria/menu/templates/menu/HTML/Plantilla.html
@@ -51,7 +51,9 @@
                 <a class="nav-link" href="{% url 'Login' %}">Iniciar Sesión</a>
               </li>
             
-            
+              <li class="box">
+                <img src="../../../static/menu/img/descargar.png" alt="No se ha encontrado la imagen">
+              </li>
 
 
 
