--- a/veterinaria/menu/static/menu/css/estilo.css
+++ b/veterinaria/menu/static/menu/css/estilo.css
@@ -419,3 +419,13 @@ footer{
   margin: 20px 0 0 0;
   color: #9e9797;
 }
+
+
+.box{
+  width: 300px;
+  height: 300px;
+  background-image: url(../img/descargar.png) ;
+  background-size: cover;
+  border-radius: 50%;
+  margin-left: 100px auto;
+}
