--- a/veterinaria/menu/templates/menu/HTML/Contacto.html
+++ b/veterinaria/menu/templates/menu/HTML/Contacto.html
@@ -1,3 +1,4 @@
+
 {% extends 'menu/HTML/Plantilla.html' %}
 
     {% load static %}
@@ -20,27 +21,27 @@
 
   <div class="container">
     <form action="{% url 'ingreso_contactos' %}" id="contact"  method="POST" enctype="multipart/form-data" >
-      {% crsf_token %}
+      {% csrf_token %}
       <h3>Contacto</h3>
       <h4>Estamos aca para responder cualquier consulta que tengas!</h4>
       <fieldset>
-        <input placeholder="Nombre" type="text" tabindex="1" id="nombre_contacto" name='nombre_contacto' autofocus>
+        <input placeholder="Nombre" type="text" tabindex="1" id="nombre_contacto" name='nombre_contacto' autofocus required>
       </fieldset>
       <fieldset>
-        <input placeholder="Correo eletronico" type="email" tabindex="2" id="correo_contacto" name='correo_contacto'>
+        <input placeholder="Correo eletronico" type="email" tabindex="2" id="correo_contacto" name='correo_contacto' required>
       </fieldset>
       <fieldset>
-        <input placeholder="Numero Telefonico" type="number" tabindex="3" id="nro_contacto" name='nro_contacto'>
+        <input placeholder="Numero Telefonico" type="number" tabindex="3" id="nro_contacto" name='nro_contacto' required>
       </fieldset>
       <fieldset>
-        <input placeholder="Nombre de Mascota" type="text" tabindex="1" id="nombre_m_contacto" name='nombre_m_contacto' autofocus>
+        <input placeholder="Nombre de Mascota" type="text" tabindex="1" id="nombre_m_contacto" name='nombre_m_contacto' autofocus required>
       </fieldset>
       <fieldset>
-        <textarea placeholder="Ingresa tu mensaje aqui" tabindex="5" id="msg_contacto" name='msg_contacto'></textarea>
+        <textarea placeholder="Ingresa tu mensaje aqui" tabindex="5" id="msg_contacto" name='msg_contacto' required></textarea>
       </fieldset>
       <fieldset>
-        <button name="submit" type="submit" onclick='return enviarformulario_contacto();' values="enviar"
-          id="contact-submit" data-submit="...Sending">Enviar</button>
+        <input name="submit" type="submit"  values="enviar"
+          id="contact-submit" data-submit="...Sending">
         <div id="error"></div>
       </fieldset>
     </form>
