--- a/veterinaria/menu/templates/menu/HTML/Plantilla.html
+++ b/veterinaria/menu/templates/menu/HTML/Plantilla.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   {% load static %}
+  
 <head>
-    
+  
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,21 +40,18 @@
                 <a class="nav-link" href="{% url 'AgendaOnline' %}">Agenda Online</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'Contacto' %}">Contacto</a>
+                <a class="nav-link" href="{% url 'Contactos' %}">Contacto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'Nosotros' %}">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'Servicios' %}">Servicios</a>
+                <a class="nav-link" href="{% url 'Servicio' %}">Servicios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'Login' %}">Iniciar Sesión</a>
               </li>
             
-              <li class="box">
-                <img src="../../../static/menu/img/descargar.png" alt="No se ha encontrado la imagen">
-              </li>
 
 
 
