--- a/veterinaria/menu/templates/menu/HTML/Inicio.html
+++ b/veterinaria/menu/templates/menu/HTML/Inicio.html
@@ -34,7 +34,7 @@
   <div class="carousel__content">
   <h1>Conoce Nuestros Servicios </h1>
   <p>Contamos con un equipo experto que cuidará la salud de tu mascota. Estamos preparados para atender a tu mascota.</p>
-  <a href="{% url 'Servicios' %}"><button class="custom-btn btn-3"><span>Consulta Aqui</span></button></a>
+  <a href="{% url 'Servicio' %}"><button class="custom-btn btn-3"><span>Consulta Aqui</span></button></a>
  </div>
 </div>
 
