--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Inicio_adm.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Inicio_adm.html
@@ -32,7 +32,7 @@
   <div class="carousel__content">
   <h1>Conoce Nuestros Servicios </h1>
   <p>Contamos con un equipo experto que cuidará la salud de tu mascota. Estamos preparados para atender a tu mascota.</p>
-  <a href="{%sstatic 'Servicios' %}"><button class="custom-btn btn-3"><span>Consulta Aqui</span></button></a>
+  <a href="{%static 'Servicios' %}"><button class="custom-btn btn-3"><span>Consulta Aqui</span></button></a>
  </div>
 </div>
 
