--- a/veterinaria/menu/templates/menu/ADMINISTRADOR/Plantilla_adm.html
+++ b/veterinaria/menu/templates/menu/ADMINISTRADOR/Plantilla_adm.html
@@ -44,7 +44,7 @@
               <a class="nav-link" href="{%url 'Contacto_Clientes' %}">Contacto con Clientes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%url 'Login_adm' %}">Iniciar Sesión</a>
+              <a class="nav-link" href="{%url 'Login' %}">Iniciar Sesión</a>
             </li>
           </ul>
           
